--- a/legal.html
+++ b/legal.html
@@ -60,7 +60,7 @@ creation de site, référencement, graphisme web, formations,outils gratuits">
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/d">best website software</a></section><section class="header11 cid-qGIaKsE5lc mbr-fullscreen" id="header11-2e">
+<section class="engine"><a href="https://mobirise.ws/o">best mobile website builder</a></section><section class="header11 cid-qGIaKsE5lc mbr-fullscreen" id="header11-2e">
 
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
@@ -158,7 +158,7 @@ creation de site, référencement, graphisme web, formations,outils gratuits">
                     <div data-form-alert="" hidden="" class="align-center">Merci!</div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="KWoQyJnw80IXs0ICjqz2mMboazms7fDRH4EMM+xEBspEdkBuOo5KeX1sB3349FO2EMcVuP+U+dMJVArspFPMEdxRPGOXYREvAk/BSNVrX3jfXhNTwtprbSGG/KcK4raZ" data-form-email="true">
+                        <input type="hidden" value="BmsEr0EhapxI+OABviU8QWvjXmoxvBifjpCHiWBGKih0YtVS9kSciQ8px77mcPgPEWHL1vmtQU9eRaB8OnjWjfqtsxLdqj1uyiCSbnmBnqwjpPyL+FE75xW3g48Plg0A" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Votre Email" id="email-footer3-2a">
                         </div>
