create github pages

--- a/offres.html
+++ b/offres.html
@@ -58,7 +58,7 @@ Offre Spéciale">
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/f">simple site creator</a></section><section class="cid-r6I2vOWw5h mbr-fullscreen mbr-parallax-background" id="header15-3c">
+<section class="engine"><a href="https://mobirise.ws/o">free mobile website builder</a></section><section class="cid-r6I2vOWw5h mbr-fullscreen mbr-parallax-background" id="header15-3c">
 
     
 
@@ -76,7 +76,7 @@ Offre Spéciale">
             <div data-form-alert="" hidden="" class="align-center">
                 Thanks for filling out the form!
             </div>
-            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="qUQWwJmr+Cdi9ggpao0g8qUNEZC7OPbQaXRa4HUTzqf1c0+VNem7lyrRxrW864kWp+juCAVp1S0lTZJjbxDVKVmJXypJioEDAEj2GarFJwJ38Bp1fdU4Lx9L/zGGk3oL" data-form-field="Email">
+            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="cIoYdKLBUjchEjWjc6CO8lixtSQ4YpEkwBzDP2bmv/wSQFZusNtD790xS1kx0K62hbx68gg24zDu82vEE8jlQiTrKY5NrT9OKYbew/cJJD1ohSq2p+A9OZ+XKEG9QHGK" data-form-field="Email">
                 <div data-for="name">
                     <div class="form-group">
                         <input type="text" class="form-control px-3" name="name" data-form-field="Name" placeholder="Name" required="" id="name-header15-3c">
@@ -194,7 +194,7 @@ Offre Spéciale">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="dpb3vB7Um7VvIkcjAHmviwqYgTkojgKDMMeeeMia2keW037Ua+AfudQP9i+jq0xggzFjNiqQBhoEqTWd5baqRuFEn5BNmK3oxC+K2viZeapCGQcYuyhGWfeaNS/1pmX5" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="rOsuG91dTwZ+Q04MNB2bapMJo4R84mBO2FKx5Y1aBS7LFONWML6d5oj/ApLzsSIS365U9gpcNtlZo4PykqFpT3jDEyuRuYZGOn0Cc2N+Po2zoS9/IwP6DvVIRRhj+GF0" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
