--- a/seo.html
+++ b/seo.html
@@ -60,7 +60,7 @@ creation de site, graphisme web, formations,outils gratuits">
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/j">how to design your own website</a></section><section class="header1 cid-qCyqBhuufY mbr-parallax-background" id="header1-11">
+<section class="engine"><a href="https://mobirise.ws/j">design own website</a></section><section class="header1 cid-qCyqBhuufY mbr-parallax-background" id="header1-11">
 
     
 
@@ -197,7 +197,7 @@ creation de site, graphisme web, formations,outils gratuits">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="nA9MrwOI5fcmCcHKGt3/oDt27BHwqcmDm8n+t2q3nPmyLWz2/WOkfxLg0wi/p7/bqi+ZBNkzb5RWSIDj7t1T8D2vmyfGrWl7cmmHbR3MmFxoc9eLnWGDW4XJUqeNnSc8" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VneVxiXVTlEIXl1RSJZTJGij+eO/UunFGbbUHr4PI/xg7f2AHffEPjtBM6oGsC0i8PNF+s4WFOs3its2lU3QhwSAJ1QfljVwfqziSCHEjgaNFVEnadboey0/diB0ePmc" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -262,7 +262,7 @@ creation de site, graphisme web, formations,outils gratuits">
                     <div data-form-alert="" hidden="" class="align-center">Merci!</div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="EYC9WyhvK4KAG27971L+cAnI7zE6r9rpPLGBgIC1mvkcHwGSOFYyd2M/+FuHbOL7NI864Fu+Pt1//ijxgxQmQLrH281TVBcp20oiHtxoF5PoSryFwXWCz2zsbj29CpEW" data-form-email="true">
+                        <input type="hidden" value="RhSWgDpJO6aGl8S6SozT+9paC6eML/uf2EKFLcmw3hByjg60giFbSadr5jAWmlhbIYUtCsAVASeOAzZeY5D5SHvAPEDaN9aUQAtlaP3Ik4JC8B8PNVzLCaiO3z5z3PRV" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Votre Email" id="email-footer3-29">
                         </div>
