--- a/temoignages.html
+++ b/temoignages.html
@@ -60,7 +60,7 @@ creation de site, référencement, graphisme web, formations,outils gratuits">
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/h">make free website</a></section><section class="header1 cid-qCxMPNJCud mbr-parallax-background" id="header1-s">
+<section class="engine"><a href="https://mobirise.ws/c">best site maker</a></section><section class="header1 cid-qCxMPNJCud mbr-parallax-background" id="header1-s">
 
     
 
@@ -267,7 +267,7 @@ creation de site, référencement, graphisme web, formations,outils gratuits">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="7Iukv65DlANbjf6NGmMrRVdLDGQt1neRiz9yYiQtSOPOJynXOfKdFoMmU3IGDREsPmccUUH6J+LxjzpfY7qZJ2Dts3WzD2LS8eEqcXuFuoppSBsJ3x+52PRUwlWPJU91" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="SViLPG9wS6rqsAoJu01jA3spMfkn8sTnRWNKqfT0XINO24Xep5AJzpv6v24h2WKeWzIwI8J1kS8E28MsyUgn+OdJpnmjCnQZKoPNm5npFAGh9+hPQA3PPT4ffq6wcROa" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -318,21 +318,21 @@ creation de site, référencement, graphisme web, formations,outils gratuits">
             </div>
             <div class="col-md-3 col-sm-4">
                 <p class="mb-4 mbr-fonts-style foot-title display-7">MENU</p>
-                <p class="mbr-text mbr-links-column mbr-fonts-style display-7"><a href="index.html">Qui sommes nous&nbsp;</a><br><a href="index.html">Nos&nbsp;Services
-</a>                    <br><a href="page4.html" target="_blank">Nous rejoindre</a><br><a href="page4.html">Mentions Legales</a></p>
+                <p class="mbr-text mbr-links-column mbr-fonts-style display-7"><a href="index.html">Qui sommes nous&nbsp;</a><br><a href="index.html#content9-1s">Nos&nbsp;Services
+</a>                    <br><a href="offres.html" target="_blank">Nous rejoindre</a><br><a href="legal.html">Mentions Legales</a></p>
             </div>
             <div class="col-md-3 col-sm-4">
                 <p class="mb-4 mbr-fonts-style foot-title display-7">CATEGORIES</p>
-                <p class="mbr-text mbr-fonts-style mbr-links-column display-7"><a href="page1.html">Referencement</a><br><a href="page5.html">Creation de Sites</a><br><a href="page2.html">Formations</a><br><a href="page1.html#features5-d">Medias Sociaux</a><br><a href="page1.html#features5-d">Marketing Digital</a></p>
+                <p class="mbr-text mbr-fonts-style mbr-links-column display-7"><a href="seo.html">Referencement</a><br><a href="site_internet.html">Creation de Sites</a><br><a href="formations.html">Formations</a><br><a href="seo.html#features18-e">Medias Sociaux</a><br><a href="seo.html#features5-d">Marketing Digital</a></p>
             </div>
             <div class="col-md-4 col-sm-12">
                 <p class="mb-4 mbr-fonts-style foot-title display-7">Nous Suivre</p>
-                <p class="mbr-text form-text mbr-fonts-style display-7"><a href="index.html#form1-1r">Restez en Contact. </a><br><a href="page4.html#footer3-24">Recevez nos offres.</a></p>
+                <p class="mbr-text form-text mbr-fonts-style display-7"><a href="index.html#form1-1r">Restez en Contact. </a><br><a href="index.html#form1-1r">Recevez nos offres.</a></p>
                 <div class="media-container-column" data-form-type="formoid">
                     <div data-form-alert="" hidden="" class="align-center">Merci!</div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="mvUvuOcMm2CPtU62KlCXlwi2hGqK/dO1AF5zH8kjoRsp3Rts2SzaQNr1a1hsypwF7JjcWQuroqMTQiDdXiVqEnmwgguMu0ZNeDEyyoL3yQBaozHgvqtmYGVOHqRzAKRZ" data-form-email="true">
+                        <input type="hidden" value="YVO1uibyMT9VoJi4VgswYXuVef6IduN3K6wECeNZ7ju3FLsQKo6DV4EHTIu9qcQyXTA4HZ41kSHy27yfFjynbphXTrXLmLWstwcnVWoG+sjugcblLC6aaMYMSHWWqbvj" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Votre Email" id="email-footer3-27">
                         </div>
@@ -350,7 +350,7 @@ creation de site, référencement, graphisme web, formations,outils gratuits">
             </div>
             <div class="media-container-row">
                 <div class="col-sm-6 copyright">
-                    <p class="mbr-text mbr-fonts-style display-7">© Copyright 2007-2018 MadeByGideon - All Rights Reserved</p>
+                    <p class="mbr-text mbr-fonts-style display-7">© Copyright 2007-2019 MadeByGideon - All Rights Reserved</p>
                 </div>
                 <div class="col-md-6">
                     <div class="social-list align-right">
